Lagt til mulighet for å sette spesifikt offset på oppgaveEndret consumer